# surveillance_sim

./: CMakeLists.txt  Dockerfile  main.cpp
1/: CMakeLists.txt  dial.cpp  dial.h  func.cpp  func.h  main.cpp  prog.h
2/: CMakeLists.txt  Doxyfile  alllibs.h  class.cpp  dial.cpp  dial.h  hclass.cpp  hclass.h  main.cpp  sclass.cpp  sclass.h  test_hclass.cpp  test_sclass.cpp
3/: CMakeLists.txt  Doxygen  ai.h  config1.json  config2.json  connection.cpp  connection_module.h  environment.cpp  environment.h  input.json  interfaces_fromModules.h  interfaces_move.h  intruder.h  main.cpp  mobile_platform.h  module.cpp  module.h  move.h  moving.cpp  moving_object.h  placeholder.h  platform.cpp  platform.h  sensor.cpp  sensor_module.h  static_platform.h  weapon.cpp  weapon_module.h
3/configs/: 2.json  big.json  compact_config.json  config.json  config1.json  config2.json  exmpl.json  graphics.json
3/headers/: ai.h  common_types.h  environment.h  game.h  graphics.h  import.h  interfaces.h  intruder.h  mobile_platform.h  module.h  module_types.h  placeholder.h  platform.h  static_platform.h  suspect.h
3/implts/: ai.cpp  environment.cpp  game.cpp  graphics.cpp  import.cpp  input.cpp  intruder.cpp  main.cpp  mobile_platform.cpp  module.cpp  moving.cpp  platform.cpp  router.cpp  sensor.cpp  static_platform.cpp  suspect.cpp  weapon.cpp
3/import/: import.cpp  import.h
3/model/: common_types.h  interfaces.h
3/model/controller/: controller.cpp  controller.h
3/model/game/: game.cpp  game.h
3/model/modules/: base_module.h  modules.h  router.cpp  sensor.cpp  weapon.cpp
3/model/objects/: base_platform.cpp  base_platform.h  moving.cpp  objects.cpp  objects.h  placeholder.h  suspect.cpp
3/model/system/: ai.cpp  ai.h  environment.cpp  environment.h  thread_pool.h
3/myvector/: myvector.h
3/tests/: ai_test.cpp  complex_scenarios_test.cpp  connection_test.cpp  environment_test.cpp  game_test.cpp  module_test.cpp  movement_test.cpp  objects_test.cpp  platform_test.cpp  suspect_test.cpp  timing.cpp
3/view/: graphics.cpp  graphics.h
configs/: exmpl.json  graphics.json
import/: import.cpp
model/controller/: controller.cpp
model/game/: game.cpp
model/modules/: modules.h  weapon.cpp
model/objects/: objects.cpp  objects.h  placeholder.h
model/system/: ai.h  environment.cpp
tests/: ai_test.cpp  movement_test.cpp  multithreading_test.cpp  vector_test.cpp
view/: graphics.cpp  graphics.json
