cmake_minimum_required(VERSION 3.16)
project(lab2)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
add_library(classes sclass.h sclass.cpp hclass.h hclass.cpp alllibs.h)
add_library(inout dial.h dial.cpp alllibs.h hclass.h hclass.cpp sclass.h sclass.cpp)
link_libraries(classes inout)
add_executable(main main.cpp)